# OpenStackClient_KMS

./: .coveragerc  .gitignore  .nosetests  .testr.conf  README.html  README.md  README.rst  setup.cfg  todo.md
kmclient/common/: display.py  exceptions.py  httpclient.py  i18n.py  manager.py  parser_builder.py  parsetypes.py  resource.py  utils.py
kmclient/osc/: plugin.py
kmclient/osc/v1/: datakey.py  encryption.py  job.py  key.py
kmclient/osc/v2/: backup.py
kmclient/tests/: base.py  fakes.py
kmclient/tests/common/: test_display.py  test_exceptions.py  test_httpclient.py  test_manager.py  test_resource.py  test_utils.py
kmclient/tests/osc/: test_plugin.py
kmclient/tests/osc/v1/: test_backup.py  test_datakey.py  test_encryption.py  test_job.py  test_key.py
kmclient/tests/osc/v2/: test_backup.py
kmclient/v1/: client.py  datakey_mgr.py  encryption_mgr.py  job_mgr.py  key_mgr.py  parser_builder.py  resource.py
kmclient/v2/: backup_mgr.py  client.py  resource.py  restore_mgr.py
tools/: hacking.sh
