[metadata]
name = python-kmclient
summary = Client Library for Managing HuaWei Volume Backup Service
description-file = README.rst
author = QianBiao Ng
author-email = xmufive@gmail.com
home-page = http://docs.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developer
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages = kmclient

[entry_points]

openstack.cli.extension =
    volume_backup = kmclient.osc.plugin

openstack.volume_backup.v2 =
    volume_backup_ext_create = kmclient.osc.v2.backup:CreateVolumeBackup
    volume_backup_ext_restore = kmclient.osc.v2.backup:RestoreVolumeBackup

openstack.volume_backup.v1 =
    volume_backup_job_show = kmclient.osc.v1.job:ShowJob


[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
