[metadata]
name = python-kmclient
summary = Client Library for Managing HuaWei Volume Backup Service
description-file = README.rst
author = QianBiao Ng
author-email = xmufive@gmail.com
home-page = http://docs.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developer
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages = kmclient

[entry_points]

openstack.cli.extension =
    key_manager = kmclient.osc.plugin

openstack.key_manager.v1 =
    key_create = kmclient.osc.v1.key:CreateKey
    key_list = kmclient.osc.v1.key:ListKey
    key_show = kmclient.osc.v1.key:ShowKey
    key_enable = kmclient.osc.v1.key:EnableKey
    key_disable = kmclient.osc.v1.key:DisableKey
    key_delete = kmclient.osc.v1.key:DeleteKey
    key_cancel_delete = kmclient.osc.v1.key:CancelDeleteKey

    encrypt_random = kmclient.osc.v1.encryption:RandomData
    encrypt_data_create = kmclient.osc.v1.encryption:CreateEncryptData
    encrypt_data_encrypt = kmclient.osc.v1.encryption:EncryptData
    encrypt_data_decrypt = kmclient.osc.v1.encryption:DecryptData


[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
