[metadata]
name = python-kmclient
summary = Client Library for Managing HuaWei Volume Backup Service
description-file = README.rst
author = QianBiao Ng
author-email = xmufive@gmail.com
home-page = http://docs.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developer
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages = kmclient

[entry_points]

openstack.cli.extension =
    key_manager = kmclient.osc.plugin

openstack.key_manager.v1 =
    kms_key_create = kmclient.osc.v1.key:CreateKey
    kms_key_list = kmclient.osc.v1.key:ListKey
    kms_key_describe = kmclient.osc.v1.key:DescribeKey
    kms_key_enable = kmclient.osc.v1.key:EnableKey
    kms_key_disable = kmclient.osc.v1.key:DisableKey
    kms_key_schedule_deletion = kmclient.osc.v1.key:ScheduleDeletionKey
    kms_key_cancel_deletion = kmclient.osc.v1.key:CancelDeletionKey

    kms_random_generate = kmclient.osc.v1.datakey:RandomGenerate
    kms_datakey_create = kmclient.osc.v1.datakey:CreateDatakey
    kms_datakey_encrypt = kmclient.osc.v1.datakey:EncryptDatakey
    kms_datakey_decrypt = kmclient.osc.v1.datakey:DecryptDatakey


[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
